--- a/machine_learning_combinatorics/feature_engineer_testing.ipynb
+++ b/machine_learning_combinatorics/feature_engineer_testing.ipynb
@@ -83,11 +83,16 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\rossr\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n"
+     "ename": "KeyError",
+     "evalue": "'col_0'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-6-3128da3fedb4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m eng = fe.FeatureEngineer(logistic_clf, f1_score, train_test_split, n_best = 15,\n\u001b[0;32m      2\u001b[0m                          scorer_kwargs = scorer_kwargs, splitter_kwargs = splitter_kwargs)\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0meng\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mc:\\projects\\experiments\\machine_learning_combinatorics\\feature_engineer.py\u001b[0m in \u001b[0;36mfit\u001b[1;34m(self, df, y)\u001b[0m\n\u001b[0;32m    113\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    114\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 115\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0maggregates_values\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfind_aggregates\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0maggregates\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    116\u001b[0m         \u001b[0mcolumns\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    117\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\projects\\experiments\\machine_learning_combinatorics\\feature_engineer.py\u001b[0m in \u001b[0;36mfind_aggregates\u001b[1;34m(df, aggregates)\u001b[0m\n\u001b[0;32m     16\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mcolumn\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0maggregate\u001b[0m \u001b[1;32min\u001b[0m \u001b[0maggregates\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 18\u001b[1;33m             \u001b[0maggregates_values\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcolumn\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0maggregate\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__name__\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0maggregate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcolumn\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     19\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0maggregates_values\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'col_0'"
      ]
     }
    ],
@@ -99,31 +104,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 0.937215909091 col_1_truediv_col_3\n",
-      "1 0.90625 col_3_sub_col_1\n",
-      "2 0.874431818182 col_0_truediv_col_3\n",
-      "3 0.871527777778 col_2_sub_col_0\n",
-      "4 0.867904589372 max_(col_2)_sub_col_2\n",
-      "5 0.836397058824 col_3_mul_col_2\n",
-      "6 0.836250783208 max_(col_3)_sub_col_3\n",
-      "7 0.798978365385 max_(col_2)_truediv_col_2\n",
-      "8 0.793648097826 min_(col_0)_sub_col_2\n",
-      "9 0.790364583333 min_(col_1)_sub_col_3\n",
-      "10 0.758564814815 col_3_mul_col_0\n",
-      "11 0.716635338346 col_2_truediv_col_3\n",
-      "12 0.714285714286 col_3_add_col_2\n",
-      "13 0.699821428571 max_(col_2)_sub_col_0\n",
-      "14 0.689583333333 col_3_mul_col_1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i, s in enumerate(sorted(eng.best_columns, reverse = True)):\n",
     "    print(i, s, eng.best_columns[s]['column_name'])"
@@ -131,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -142,262 +125,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>col_0</th>\n",
-       "      <th>col_1</th>\n",
-       "      <th>col_2</th>\n",
-       "      <th>col_3</th>\n",
-       "      <th>max_(col_2)_sub_col_0</th>\n",
-       "      <th>max_(col_2)_sub_col_2</th>\n",
-       "      <th>max_(col_2)_truediv_col_2</th>\n",
-       "      <th>col_3_add_col_2</th>\n",
-       "      <th>col_3_sub_col_1</th>\n",
-       "      <th>min_(col_0)_sub_col_2</th>\n",
-       "      <th>col_3_mul_col_0</th>\n",
-       "      <th>min_(col_1)_sub_col_3</th>\n",
-       "      <th>max_(col_3)_sub_col_3</th>\n",
-       "      <th>col_3_mul_col_2</th>\n",
-       "      <th>col_2_sub_col_0</th>\n",
-       "      <th>col_0_truediv_col_3</th>\n",
-       "      <th>col_3_mul_col_1</th>\n",
-       "      <th>col_1_truediv_col_3</th>\n",
-       "      <th>col_2_truediv_col_3</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>5.1</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>5.5</td>\n",
-       "      <td>4.928571</td>\n",
-       "      <td>1.6</td>\n",
-       "      <td>-3.3</td>\n",
-       "      <td>2.9</td>\n",
-       "      <td>1.02</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>2.3</td>\n",
-       "      <td>0.28</td>\n",
-       "      <td>-3.7</td>\n",
-       "      <td>25.5</td>\n",
-       "      <td>0.70</td>\n",
-       "      <td>17.5</td>\n",
-       "      <td>7.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>4.9</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>5.5</td>\n",
-       "      <td>4.928571</td>\n",
-       "      <td>1.6</td>\n",
-       "      <td>-2.8</td>\n",
-       "      <td>2.9</td>\n",
-       "      <td>0.98</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>2.3</td>\n",
-       "      <td>0.28</td>\n",
-       "      <td>-3.5</td>\n",
-       "      <td>24.5</td>\n",
-       "      <td>0.60</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>7.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4.7</td>\n",
-       "      <td>3.2</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>2.2</td>\n",
-       "      <td>5.6</td>\n",
-       "      <td>5.307692</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>-3.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0.94</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>2.3</td>\n",
-       "      <td>0.26</td>\n",
-       "      <td>-3.4</td>\n",
-       "      <td>23.5</td>\n",
-       "      <td>0.64</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>6.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4.6</td>\n",
-       "      <td>3.1</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>2.3</td>\n",
-       "      <td>5.4</td>\n",
-       "      <td>4.600000</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>-2.9</td>\n",
-       "      <td>2.8</td>\n",
-       "      <td>0.92</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>2.3</td>\n",
-       "      <td>0.30</td>\n",
-       "      <td>-3.1</td>\n",
-       "      <td>23.0</td>\n",
-       "      <td>0.62</td>\n",
-       "      <td>15.5</td>\n",
-       "      <td>7.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5.0</td>\n",
-       "      <td>3.6</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>1.9</td>\n",
-       "      <td>5.5</td>\n",
-       "      <td>4.928571</td>\n",
-       "      <td>1.6</td>\n",
-       "      <td>-3.4</td>\n",
-       "      <td>2.9</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>2.3</td>\n",
-       "      <td>0.28</td>\n",
-       "      <td>-3.6</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>0.72</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>7.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   col_0  col_1  col_2  col_3  max_(col_2)_sub_col_0  max_(col_2)_sub_col_2  \\\n",
-       "0    5.1    3.5    1.4    0.2                    1.8                    5.5   \n",
-       "1    4.9    3.0    1.4    0.2                    2.0                    5.5   \n",
-       "2    4.7    3.2    1.3    0.2                    2.2                    5.6   \n",
-       "3    4.6    3.1    1.5    0.2                    2.3                    5.4   \n",
-       "4    5.0    3.6    1.4    0.2                    1.9                    5.5   \n",
-       "\n",
-       "   max_(col_2)_truediv_col_2  col_3_add_col_2  col_3_sub_col_1  \\\n",
-       "0                   4.928571              1.6             -3.3   \n",
-       "1                   4.928571              1.6             -2.8   \n",
-       "2                   5.307692              1.5             -3.0   \n",
-       "3                   4.600000              1.7             -2.9   \n",
-       "4                   4.928571              1.6             -3.4   \n",
-       "\n",
-       "   min_(col_0)_sub_col_2  col_3_mul_col_0  min_(col_1)_sub_col_3  \\\n",
-       "0                    2.9             1.02                    1.8   \n",
-       "1                    2.9             0.98                    1.8   \n",
-       "2                    3.0             0.94                    1.8   \n",
-       "3                    2.8             0.92                    1.8   \n",
-       "4                    2.9             1.00                    1.8   \n",
-       "\n",
-       "   max_(col_3)_sub_col_3  col_3_mul_col_2  col_2_sub_col_0  \\\n",
-       "0                    2.3             0.28             -3.7   \n",
-       "1                    2.3             0.28             -3.5   \n",
-       "2                    2.3             0.26             -3.4   \n",
-       "3                    2.3             0.30             -3.1   \n",
-       "4                    2.3             0.28             -3.6   \n",
-       "\n",
-       "   col_0_truediv_col_3  col_3_mul_col_1  col_1_truediv_col_3  \\\n",
-       "0                 25.5             0.70                 17.5   \n",
-       "1                 24.5             0.60                 15.0   \n",
-       "2                 23.5             0.64                 16.0   \n",
-       "3                 23.0             0.62                 15.5   \n",
-       "4                 25.0             0.72                 18.0   \n",
-       "\n",
-       "   col_2_truediv_col_3  \n",
-       "0                  7.0  \n",
-       "1                  7.0  \n",
-       "2                  6.5  \n",
-       "3                  7.5  \n",
-       "4                  7.0  "
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "iris_x.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 150 entries, 0 to 149\n",
-      "Data columns (total 19 columns):\n",
-      "col_0                        150 non-null float64\n",
-      "col_1                        150 non-null float64\n",
-      "col_2                        150 non-null float64\n",
-      "col_3                        150 non-null float64\n",
-      "max_(col_2)_sub_col_0        150 non-null float64\n",
-      "max_(col_2)_sub_col_2        150 non-null float64\n",
-      "max_(col_2)_truediv_col_2    150 non-null float64\n",
-      "col_3_add_col_2              150 non-null float64\n",
-      "col_3_sub_col_1              150 non-null float64\n",
-      "min_(col_0)_sub_col_2        150 non-null float64\n",
-      "col_3_mul_col_0              150 non-null float64\n",
-      "min_(col_1)_sub_col_3        150 non-null float64\n",
-      "max_(col_3)_sub_col_3        150 non-null float64\n",
-      "col_3_mul_col_2              150 non-null float64\n",
-      "col_2_sub_col_0              150 non-null float64\n",
-      "col_0_truediv_col_3          150 non-null float64\n",
-      "col_3_mul_col_1              150 non-null float64\n",
-      "col_1_truediv_col_3          150 non-null float64\n",
-      "col_2_truediv_col_3          150 non-null float64\n",
-      "dtypes: float64(19)\n",
-      "memory usage: 22.3 KB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "iris_x.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -408,30 +154,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
-       "          intercept_scaling=1, max_iter=100, multi_class='ovr', n_jobs=1,\n",
-       "          penalty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
-       "          verbose=0, warm_start=False)"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "logistic_clf.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -443,20 +175,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 1.00\n",
-      "Precision: 1.00\n",
-      "Recall: 1.00\n",
-      "F1 score: 1.00\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('Accuracy: {:.2f}'.format(accuracy_score(y_test, y_pred)))\n",
     "print('Precision: {:.2f}'.format(precision_score(y_test, y_pred, average = 'weighted')))\n",
